# mlops_training_esme

./: .gitignore  .pre-commit-config.yaml  MLproject  Makefile  README.md  conda.yaml  config.yaml  datastores.dvc  main.py  pyproject.toml
datastores/prod_data/: df_test.csv
notebook/: EDA.ipynb  conda.yaml
salary_classifier/src/salary_classifier/common/: log.py  metrics.py  utils.py
salary_classifier/src/salary_classifier/data_preprocessing/: MLproject  Makefile  conda.yaml  preprocessing.py  run.py
salary_classifier/src/salary_classifier/data_splits/: MLproject  conda.yaml  run.py
salary_classifier/src/salary_classifier/model_training/: MLproject  conda.yaml  train.py
